# libra-context

./: .gitignore  LICENSE  README.md  libra-project-specification.md  pyproject.toml
.agent/: plan.md
agent_hive/: README.md  __init__.py  hive.py  requirements.txt  run_hive.py
agent_hive/config/: __init__.py  settings.py
agent_hive/drones/: __init__.py  analyst.py  base.py  builder.py  researcher.py  seller.py  worker.py
agent_hive/learning/: __init__.py  ace_wrapper.py  hive_skillbook.py
agent_hive/monetization/: __init__.py  opportunities.py  products.py  strategies.py  treasury.py
agent_hive/queen/: __init__.py  agent.py  planner.py  replicator.py
agent_hive/tests/: __init__.py  test_hive.py  test_web_tools.py
agent_hive/tools/: __init__.py  code_tools.py  file_tools.py  web_tools.py
docs/: ARCHITECTURE.md  SETUP.md
libra/: __init__.py  service.py
libra/core/: __init__.py  config.py  models.py
libra/embedding/: aws_bedrock.py  azure_openai.py  base.py  custom.py  gemini.py  huggingface.py  local.py  together.py
libra/ingestion/: __init__.py  chunker.py  directory.py  markdown.py
libra/interfaces/: __init__.py  api.py  cli.py  mcp_server.py
libra/librarian/: __init__.py  budget.py  hybrid.py  llm.py  llm_generic.py  rules.py
libra/llm_providers/: aws_bedrock.py  base.py  custom.py  huggingface.py  ollama.py  together.py
libra/storage/: database.py
libra/utils/: __init__.py  tokens.py
tests/: test_core.py  test_ingestion.py  test_librarian.py  test_storage.py
