[project]
name = "libra-context"
version = "0.1.0"
description = "Intelligent Context Orchestration for AI Agents"
readme = "libra-project-specification.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "libra team", email = "team@libra-context.io" }
]
keywords = [
    "ai",
    "context",
    "llm",
    "mcp",
    "rag",
    "knowledge-base",
    "embedding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pyyaml>=6.0",

    # Gemini AI (primary LLM and embedding provider)
    "google-generativeai>=0.8.0",

    # SQLite with vector search
    "sqlite-vec>=0.1.0",

    # Token counting
    "tiktoken>=0.7.0",

    # CLI
    "typer[all]>=0.12.0",
    "rich>=13.0.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",

    # MCP
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

local = [
    # Local embeddings fallback
    "sentence-transformers>=3.0.0",
]

[project.scripts]
libra = "libra.interfaces.cli:main"

[project.urls]
Homepage = "https://github.com/libra-context/libra"
Documentation = "https://libra-context.io/docs"
Repository = "https://github.com/libra-context/libra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libra"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in default argument (ok for FastAPI/Typer)
    "B904",  # raise from - we include exception info in message already
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
